# sparsync

./: .gitignore  BENCHMARKS.md  Cargo.toml  LICENSE  MTLS_ERGONOMICS.md  PERFORMANCE.md  PERFORMANCE_LOG.md  PERF_PLAN.md  PROTOCOL.md  README.md  REMAINING_HACKS.md  RSYNC_COMPAT.md
.cargo/: config.toml
.github/workflows/: benchmark-gate.yml  publish-crates.yml
scripts/: bench_ci_gate.sh  bench_remote_rsync_vs_sparsync.sh  bench_remote_rsync_vs_sparsync_median.sh
src/: auth.rs  bench.rs  bootstrap.rs  certs.rs  compression.rs  endpoint.rs  filter.rs  local_copy.rs  main.rs  metadata.rs  model.rs  profile.rs  protocol.rs  scan.rs  server.rs  state.rs  stdio_server.rs  transfer.rs  util.rs
