[package]
name = "sparsync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
filetime = "0.2"
futures = "0.3"
num_cpus = "1.17"
rand = "0.9"
rcgen = "0.13"
rkyv = "0.7.46"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zstd = "0.13"
spargio = { version = "0.5.8", features = ["uring-native"] }
spargio-quic = "0.5.8"
