[package]
name = "sparsync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
filetime = "0.2"
futures = "0.3"
num_cpus = "1.17"
rand = "0.9"
rcgen = { version = "0.13", features = ["x509-parser"] }
rkyv = { version = "0.7.46", features = ["validation"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zstd = "0.13"
io-uring = "0.7"
libc = "0.2"
globset = "0.4"
spargio = { version = "0.5.8", features = ["uring-native"] }
spargio-quic = "0.5.8"
